--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-agent/model/data/train.txt
-agent/model/data/eval.txt
+agent/model/data/*.txt
+agent/model/*.pt
+!agent/model/data/generate_data.py
+
+agent/model/__pycache__/
